5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1582_1331.log
== TEST (2019-03-14 17:44:43) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:45:34) 
-- CODE:
print(50//3
print(50%3)
-- ERROR:
File "XXXX", line 2
    print(50%3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:45:48) 
-- CODE:
print(50//3
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:45:54) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:45:56) 
-- CODE:
print(50//3)
-- EXECUTION TIME:
0.150591
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:46:03) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:46:36) 
-- CODE:
print(50//4)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:46:46) 
-- CODE:
print(50//4)
-- EXECUTION TIME:
0.127288
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:46:49) 
-- CODE:
print(50//4)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:47:42) 
-- CODE:
print(50//4)
print(9%4)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:47:54) 
-- CODE:
print(50//4)
print(50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:01) 
-- CODE:
print(50//4)
print(50%3)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:32) 
-- CODE:
print(50//4)
print(12%3)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:45) 
-- CODE:
print(50//4)
print(12%4)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:03) 
-- CODE:
print(50//4)
print(50%3)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:16) 
-- CODE:
print(50//4)
print(75%3)
-- OUTPUT:
12
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:29) 
-- CODE:
print(50//4)
print(75%16)
-- OUTPUT:
12
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:41) 
-- CODE:
print(50//4)
print(75%12)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:49:48) 
-- CODE:
print(50//4)
print(75%12)
-- EXECUTION TIME:
0.178052
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:49:53) 
-- CODE:
print(50//4)
print(75%12)
-- EXECUTION TIME:
0.138785
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:57) 
-- CODE:
print(50//4)
print(75%12)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:50:05) 
-- CODE:
print(50//4)
print(75%12)
-- EXECUTION TIME:
0.136485
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:50:29) 
-- CODE:
print(50//4)
print(75%12)
-- OUTPUT:
12
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:51:59) 
-- CODE:
print(50//4)
print(75%12)
print(25%12)
-- OUTPUT:
12
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:52:02) 
-- CODE:
print(50//4)
print(75%12)
print(25%12)
-- OUTPUT:
12
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:52:12) 
-- CODE:
print(50//4)
print(25%12)
-- OUTPUT:
12
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:53:00) 
-- CODE:
print(75%50)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:53:38) 
-- CODE:
print(75%50)
print(25//3)
-- OUTPUT:
25
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:55:00) 
-- CODE:
print(75%50)
print(25//3)
print(25%50)
-- OUTPUT:
25
8
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:55:16) 
-- CODE:
print(75%50)
print(25//3)
print(25%50)
-- OUTPUT:
25
8
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:05:37) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:12) 
-- CODE:
print(48/3)
-- OUTPUT:
16.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:41:13) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:41:38) 
-- CODE:
print(50%4)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:42:38) 
-- CODE:
print(50%4)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:42:59) 
-- CODE:
print(48/3)
-- OUTPUT:
16.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:36) 
-- CODE:
print(48/3)
print(50%4)
-- OUTPUT:
16.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:43:40) 
-- CODE:
print(48/3)
print(50%4)
-- EXECUTION TIME:
0.203509
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:47) 
-- CODE:
print(48/3)
print(50%4)
-- OUTPUT:
16.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:44:08) 
-- CODE:
print int((48/3))
print(50%4)
-- ERROR:
File "XXXX", line 1
    print int((48/3))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:44:30) 
-- CODE:

print(50%4)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:09:57) 
-- CODE:
print(50//4)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:12:12) 
-- CODE:
print(50//4)
print(12*3)
-- OUTPUT:
12
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:08) 
-- CODE:
print(50//4)
print(12*3)
print(50-36)
-- OUTPUT:
12
36
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:13:14) 
-- CODE:
print(50//4)
print(12*3)
print(50-36)
-- EXECUTION TIME:
0.159308
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
36
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:53) 
-- CODE:
print(50//4)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:09) 
-- CODE:
print(50//4)
print(50-36)
-- OUTPUT:
12
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:17:12) 
-- CODE:
print(50//4)
print(50-36)
-- EXECUTION TIME:
0.193861
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:30) 
-- CODE:
print(50%4)
print(50-36)
-- OUTPUT:
2
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:18:43) 
-- CODE:
print(50%4)
print(50-48)
-- OUTPUT:
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:18:47) 
-- CODE:
print(50%4)
print(50-48)
-- EXECUTION TIME:
0.157089
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:21) 
-- CODE:
print(50%3)
print()
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:05) 
-- CODE:
print(48/3)
print()
-- OUTPUT:
16.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:10) 
-- CODE:
print(48//3)
print()
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:40) 
-- CODE:
print(48//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:20:42) 
-- CODE:
print(48//3)
print(50%3)
-- EXECUTION TIME:
0.114172
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
